# rs232-tool

./: .clang-format  .gitignore  CMakeLists.txt  README.md  dlrdialog.cpp  dlrdialog.h  dlrdialog.ui  gamepad.json  gamepad_dialog.cpp  gamepad_dialog.h  gamepad_dialog.ui  gamepadconfig.cpp  gamepadconfig.h  gamepadthread.cpp  gamepadthread.h  listentry.cpp  listentry.h  loopdialog.cpp  loopdialog.h  loopdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  oszigraph.cpp  oszigraph.h  osziview.cpp  osziview.h  osziview.ui  protocolEdit.ui  readingthread.cpp  readingthread.h  rs232-tool.pro  rs232-tool.pro.user.3bf7e98  rs232-tool.pro.user.a0c57d3  rs232-tool.qrc  rs232-tool_0.1.1_dlr_resource.rc  rs232_ressources.qrc  rs232scriptparser.cpp  rs232scriptparser.h  (+7 more)
RS232-Tool_installer/: run.txt
RS232-Tool_installer/config/: config.xml
